fixed stats misalignment on homepage

--- a/style.css
+++ b/style.css
@@ -404,6 +404,9 @@ nav {
 
 .stat {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .stat-number {
